--- a/playbooks/mywordpress.yaml
+++ b/playbooks/mywordpress.yaml
@@ -26,7 +26,7 @@
         dest: /tmp/
 
     - name: unzip wordpress
-      unzip: 
+      anarchive: 
         src: /tmp/wordpress_version tar.gz
         dest: /var/www/html/
         
