--- a/playbooks/wordpress and user .yaml
+++ b/playbooks/wordpress and user .yaml
@@ -15,7 +15,7 @@
         - ben
         - lisa
         - katty 
-    - name: Install remi repo.
+    - name: Install remi repo
       yum:
         name: http://rpms.famillecollet.com/enterprise/remi-release-{{ ansible_distribution_major_version }}.rpm
         state: present
