--- a/playbooks/wordpress and users.yaml
+++ b/playbooks/wordpress and users.yaml
@@ -44,13 +44,13 @@
 
     - name: Download wordpress
       get_url:
-        url: https://wordpress.org/latest.zip 
+        url: https://wordpress.org/latest.tar.gz
         dest: /tmp/
 
 
     - name: Unzip wordpress
       unarchive: 
-        src: /tmp/wordpress-5.4.zip
+        src: /tmp/wordpress-5.3.2.tar.gz
         dest: /var/www/html/
         remote_src: yes
 
