--- a/playbooks/wordpress and users.yaml
+++ b/playbooks/wordpress and users.yaml
@@ -20,8 +20,8 @@
         name: http://rpms.famillecollet.com/enterprise/remi-release-{{ ansible_distribution_major_version }}.rpm
         state: present
 
-    # - name: install remi repo 7
-    #   shell: "yum install http://rpms.remirepo.net/enterprise/remi-release-7.rpm -y"   (this will get you the repo, but if its already installed will give an error) 
+    - name: install remi repo 7
+      shell: "yum install http://rpms.remirepo.net/enterprise/remi-release-7.rpm -y"   
 
     - name: enable remi-php72
       shell: "yum-config-manager --enable remi-php72"
@@ -50,7 +50,7 @@
 
     - name: Unzip wordpress
       unarchive: 
-        src: /tmp/wordpress-5.3.2.tar.gz
+        src: /tmp/wordpress-5.4.1.tar.gz
         dest: /var/www/html/
         remote_src: yes
 
