--- a/playbooks/wordpress and users.yaml
+++ b/playbooks/wordpress and users.yaml
@@ -50,7 +50,7 @@
 
     - name: Unzip wordpress
       unarchive: 
-        src: /tmp/wordpress-5.4.1.tar.gz
+        src: /tmp/wordpress
         dest: /var/www/html/
         remote_src: yes
 
