--- a/playbooks/wordpress and users.yaml
+++ b/playbooks/wordpress and users.yaml
@@ -1,6 +1,7 @@
 ---
 - name: Install wordpress on CentOS 7 
-  hosts: 3.80.178.70
+  # gather_facts: no 
+  hosts: 3.80.178.70 
   become: true
   become_method: sudo
   user: centos  
@@ -20,8 +21,8 @@
         name: http://rpms.famillecollet.com/enterprise/remi-release-{{ ansible_distribution_major_version }}.rpm
         state: present
 
-    - name: install remi repo 7
-      shell: "yum install http://rpms.remirepo.net/enterprise/remi-release-7.rpm -y"   
+    # - name: install remi repo 7
+    #   shell: "yum install http://rpms.remirepo.net/enterprise/remi-release-7.rpm -y"   (this will get you the repo, but if its already installed will give an error) 
 
     - name: enable remi-php72
       shell: "yum-config-manager --enable remi-php72"
@@ -44,15 +45,15 @@
 
     - name: Download wordpress
       get_url:
-        url: https://wordpress.org/latest.tar.gz
+        url: https://wordpress.org/latest.tar.gz 
         dest: /tmp/
 
 
     - name: Unzip wordpress
       unarchive: 
-        src: /tmp/latest.tar.gz
+        src: /tmp/wordpress-5.4.tar.gz
         dest: /var/www/html/
-        remote_src: yes
+        remote_src: yes 
 
 
     - name: move files
