--- a/playbooks/wordpress and users.yaml
+++ b/playbooks/wordpress and users.yaml
@@ -75,8 +75,8 @@
 
 
 - name: add a record to route53
-  hosts: localhost
-  gather_facts: false
+  hosts: 3.80.178.70
+  gather_facts: yes
   tasks:
     - route53:
         command: create
