--- a/playbooks/r1soft_agent.yaml
+++ b/playbooks/r1soft_agent.yaml
@@ -6,22 +6,28 @@
   user: centos
   when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "6")
   tasks:
+ 
   - name: Create repo
     copy:
       src: r1soft.repo
       dest: /etc/yum.repos.d/
+  
   - name: Install agent
     package:  
       name: serverbackup-enterprise-agent   
       state: installed 
     notify: AGENT_RESTART
+  
   - name: Stop iptables
     service: 
       name: iptables
       state: stopped
       enabled: false
+  
   - name: Get Key
-    shell: "r1soft-setup --get-key http://backup.acirrustech.com/" 
+    shell: "r1soft-setup --get-key http://backup.kakoev.com/" 
+  
+  
   handlers: 
     name: AGENT_RESTART
     service: 
