--- a/playbooks/r1soft_agent.yaml
+++ b/playbooks/r1soft_agent.yaml
@@ -29,7 +29,7 @@
   
   
   handlers: 
-    name: AGENT_RESTART
+  - name: AGENT_RESTART
     service: 
       name: cdp-agent 
       state: restarted
