--- a/playbooks/r1soft_agent.yaml
+++ b/playbooks/r1soft_agent.yaml
@@ -4,29 +4,31 @@
   become: true
   become_method: sudo
   user: centos
-  when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "6")
   tasks:
- 
   - name: Create repo
+    when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "6")
     copy:
       src: r1soft.repo
       dest: /etc/yum.repos.d/
-  
+
   - name: Install agent
+    when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "6")
     package:  
       name: serverbackup-enterprise-agent   
       state: installed 
     notify: AGENT_RESTART
-  
+
   - name: Stop iptables
+    when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "6")
     service: 
       name: iptables
       state: stopped
       enabled: false
-  
+
   - name: Get Key
-    shell: "r1soft-setup --get-key http://backup.kakoev.com/" 
-  
+    when: (ansible_distribution == "CentOS" and ansible_distribution_major_version == "6")
+    shell: "r1soft-setup --get-key http://backup.acirrustech.com/" 
+
   
   handlers: 
   - name: AGENT_RESTART
@@ -34,3 +36,7 @@
       name: cdp-agent 
       state: restarted
       enabled: true
+
+  
+
+
