--- a/playbooks/file_content_manager_blockinfile.yaml
+++ b/playbooks/file_content_manager_blockinfile.yaml
@@ -11,4 +11,4 @@
       block: |
         This file is created by me
         and managed by me
-      create: yes
+      create: yes                       #In case file is not existing 
